src/app/pages/editor/editor.component.css
:host {
  display: flex;
  flex-flow: column;
  height: calc(100% - 64px);
}

.widget-bar {
  display: flex;
  height: 48px;
  padding: 0 24px;

  & .widgets {
    display: flex;

    & div {
      display: flex;
      align-items: center;
      height: inherit;
    }

    & mat-divider {
      height: 100%;
      margin: 0 8px;

      @media (max-width: 1605px) {
        margin: 0 6px;
      }

      @media (max-width: 1460px) {
        margin: 0 4px;
      }
    }

    & mat-icon {
      cursor: grab;

      margin: 0 8px;

      transform: none!important;

      @media (max-width: 1605px) {
        margin: 0 6px;
      }

      @media (max-width: 1460px) {
        margin: 0 4px;
      }
    }
  }

  & .expand {
    display: flex;
    flex: 1;
  }

  & .actions {
    display: flex;
  }
}

.fig-widget-preview,
.fig-widget-placeholder {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 360px;
  height: 48px;

  &:hover {
    cursor: pointer!important;
  }

  & .content {
    display: flex;
    align-items: center;
    margin-left: 12px;
  }

  & mat-icon {
    margin-right: 12px;
  }
}

.panels {
  display: flex;
  height: calc(100% - 48px);

  & mat-tab-group {
    box-sizing: border-box;
    border-top: 1px solid var(--mat-divider-color);
  }

  & fig-tree {
    display: flex;
    flex-flow: column;
  }

  & .slider {
    cursor: col-resize;
    padding-left: 3px;

    box-sizing: border-box;
    border-top: 1px solid var(--mat-divider-color);
  }

  & fig-canvas {
    box-sizing: border-box;
    background-color: #738c99;
    border-top: 1px solid #494949;
  }

  & fig-properties {
    overflow-y: auto;
    width: 360px;

    box-sizing: border-box;
    border-top: 1px solid var(--mat-divider-color);
    border-left: 1px solid var(--mat-divider-color);
  }
}

